# i.maker_backend

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ecr.yml  ruff.yml
lib/: config.py
src/: main.py  model.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 061c20911f01_add_sub_id_column.py  0bcccf942e6f_add_member_num_column.py  2c86ba545f1b_add_cascade.py  71a2242b8392_add_played__at_column.py  7fab0a136453_add_description_to_quizset_table.py  80075120be14_fix_sub_id.py  822b43aea830_initial_migration.py  8eb12e274cdf_add_score_to_groups_table.py
src/router/: group.py  question.py  quizsets.py
src/schema/: group.py  question.py  quizset.py
src/service/: group.py  question.py  quizset.py
