[tool.poetry]
name = "i-maker"
version = "0.1.0"
description = ""
authors = ["Katsuya Ogata"]
readme = "README.md"
packages = [{include = "i"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
