[tool.poetry]
name = "i-maker"
version = "0.1.0"
description = ""
authors = ["Katsuya Ogata"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
alembic = "^1.13.2"
sqlalchemy = "^2.0.35"
aiomysql = "^0.2.0"
sqlalchemy-utils = "^0.41.2"
pydantic-settings = "^2.5.2"
starlette = "^0.38.5"
pydantic = "2.7.0"
cryptography = "^43.0.1"
ruff = "^0.6.9"
mangum = "^0.19.0"
aws-lambda-powertools = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
